feat: add lineChart endpoint to Platform.ChartRendering (#4510)
